tests/error/poly_errors/type_apply_too_many.err
Error: Too many type arguments (at $FILE:17:13)
   | 
15 | @guppy(module)
16 | def main() -> None:
17 |     foo[int, float, bool]
   |              ^^^^^^^^^^^ Unexpected type arguments (expected 1, got 3)

Note: Function signature is `forall T. T -> None`

Guppy compilation failed due to 1 previous error
